== 0.9.3 2009-01-29

* install_choctop generates a ReleaseNotes.txt file
* 'rake feed' converts ReleaseNotes.txt into release_notes.html file for upload
* #name is the project's folder name if info_plist['CFBundleExecutable'] == "${EXECUTABLE}"
* builder of xml feed flushes immediately now so no more 0 length xml feeds

== 0.9.2 2009-01-29

* fixed instances of "SUFeedURLKey" to "SUFeedURL" due to f@#$-up error message in Sparkle code that led me astray

== 0.9.1 2009-01-29

* default DMG theme is a sky background and plain volume icon
* sparkle xml feed includes a DSA signature
* explicit release_notes property

== 0.9.0 2009-01-28

* 1 major enhancement:
  * Initial release